--- a/demo/src/main/res/layout/activity_demo.xml
+++ b/demo/src/main/res/layout/activity_demo.xml
@@ -16,7 +16,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <android.support.v7.widget.Toolbar android:id="@+id/main_toolbar"
+        <androidx.appcompat.widget.Toolbar android:id="@+id/main_toolbar"
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:sothree="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
